test/sema/typeck/for/missing-assoc-type.out
error: Missing associated type `IteratorType`.
--> missing-assoc-type.dora:2:1 - 4:2
1 error found.
