test/sema/typeck/for/missing-assoc-type.dora
class Foo
impl std::traits::IntoIterator for Foo {
    fn iter(): FooIter { return FooIter(); }
}

class FooIter

impl std::traits::Iterator for FooIter {
    type Item = Int32;
    fn next(): Option[Int32] { Some[Int32](0i32) }
}

fn f(): Int32 {
    for i in Foo() {
        return i;
    }
    return 0i32;
}

====================
error: Missing associated type `IteratorType`.
--> missing-assoc-type.dora:2:1 - 4:2
1 error found.
